--- a/modules/renderer/src/styles/layout.scss
+++ b/modules/renderer/src/styles/layout.scss
@@ -1,6 +1,10 @@
 #window-handle {
   -webkit-user-select: none;
   -webkit-app-region: drag;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
